[package]
name = "rust-gpui-sm3-tool"
version = "0.1.0"
edition = "2024"
# 添加这一行
build = "build.rs"
[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
rfd = "0.17.2" # 跨平台文件选择对话框
sm3 = "0.5"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] } # 用于后台计算
hex = "0.4"
serde = { version = "1", features = ["derive"] }


# 构建时依赖
[build-dependencies]
winresource = "0.1"

# ==================== 版本信息（推荐写在这里） ====================
[package.metadata.winresource]
FileDescription = "SM3摘要计算工具"
ProductName = "SM3摘要工具"
LegalCopyright = "Copyright © 2026"
CompanyName = "dousx"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
